--- a/templates/login.html
+++ b/templates/login.html
@@ -2,12 +2,27 @@
 
 {% block page_content %}
 {% from "_formhelpers.html" import render_field %}
-<form method=post>
+
+<form method='POST'>
+	{{ form.csrf_token}}
   <dl>
     {{ render_field(form.username) }}
     {{ render_field(form.password) }}
   </dl>
-  <p><input type=submit value=login>
+  <p><input type='submit' value='login'>
 </form>
+
+<!-- form that renders any hidden fields, including CSRF field -->
+<!--
+<form method='POST' action='/'>
+	{{ form.hidden_tag() }}
+	{{ form.username.label }} {{ form.username(size=20)}}
+	<input type='submit' value='GO'>
+</form>
+-->
+<!-- display form errors if any -->
+{% if form.errors %}
+	{{ form.errors }}
+{% endif %}
 {% endblock %}
 
